array.island.Island.scala.error
Compilation error:
Island:14: error: identifier expected but integer literal found.
    else if (num[i] > num[i+1]) statut = 2;
                            ^Island:16: error: ']' expected but '}' found.
  }
  ^